# Obstacle_Avoidance

./: README.md
multi_robot/: CMakeLists.txt
multi_robot/description/: camera.xacro  gazebo_control.xacro  gazebo_control1.xacro  lidar.xacro  robot.urdf.xacro  robot1.urdf.xacro  robot_core.xacro  robot_core1.xacro
multi_robot/launch/: robotlaunch.launch.py
multi_robot/multi_robot/: package.xml
obav/: package.xml  setup.cfg  setup.py
obav/launch/: obstacleavoidance.launch.py
obav/obav/: controller.py  lidarcontroller.py  test.py  testlidarcontroller.py
racetrack/: CMakeLists.txt  package.xml
racetrack/models/aws_robomaker_racetrack_Billboard_01/: model.sdf
racetrack/models/aws_robomaker_racetrack_Ground_01/: model.sdf
racetrack/models/aws_robomaker_racetrack_Light_01/: model.sdf
racetrack/models/aws_robomaker_racetrack_Track_05/: model.sdf
racetrack/models/aws_robomaker_racetrack_Trackline_01/: model.sdf
racetrack/worlds/: racetrack.world  trac  track.world  tracknew.world
