<?xml version="1.0"?>
<package format="3">
  <name>racetrack</name>
  <version>2.0.0</version>
  <description>
    AWS RoboMaker ROS2 package for a simple racetrack for Gazebo simulations.
  </description>
  <maintainer email="ishanpraveen44790@gmail.com">shxck</maintainer>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
